// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert array of path into array of array of path 1`] = `
Array [
  Object {
    "options": undefined,
    "paths": Array [
      "packages/eslint-config-marlint/src/index.js",
      "packages/eslint-config-marlint/src/rules/base.js",
    ],
  },
  Object {
    "options": undefined,
    "paths": Array [
      "packages/marlint/src/index.js",
      "packages/marlint/src/cli.js",
    ],
  },
  Object {
    "options": undefined,
    "paths": Array [
      "packages/atom.marlint/src/index.js",
      "packages/atom.marlint/src/linter.js",
    ],
  },
]
`;

exports[`works on hybrid paths combination 1`] = `
Array [
  Object {
    "options": undefined,
    "paths": Array [
      "packages/eslint-config-marlint/src/index.js",
      "packages/eslint-config-marlint/src/rules/base.js",
    ],
  },
  Object {
    "options": undefined,
    "paths": Array [
      "marlint/src/index.js",
      "marlint/src/cli.js",
    ],
  },
]
`;
